hphp/hack/test/typecheck/ppl/inst_meth.php.exp
File "inst_meth.php", line 8, characters 20-24:
inst_meth cannot be used with a <<__PPL>> class (Typing[4272])
